tests/api/reference/negative/12-list-new-arity.asm
const invalid: list = list.new(1)
